--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@tailwindcss/vite": "^4.0.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.3.0",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.12"
+    "tailwindcss": "^4.0.12",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
